--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "typo3-cms-extension",
     "description": "SYZYGY Base Extension for TYPO3 CMS",
     "homepage": "http://www.syzygy.de",
-    "license": [""],
+    "license": ["GPL-3.0+"],
     "require": {
         "typo3/cms-core": ">=8.7.0,<8.7.99",
         "typo3/cms-form": "^8.7.8"
