--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,47 @@
     "homepage": "http://www.syzygy.de",
     "license": ["GPL-3.0+"],
     "require": {
-        "typo3/cms-core": ">=8.7.0,<8.7.99",
+        "php": "^7.0",
+
+        "typo3/cms-backend": "^8.7.7",
+        "typo3/cms-core": "^8.7.7",
+        "typo3/cms-extbase": "^8.7.7",
+        "typo3/cms-extensionmanager": "^8.7.7",
+        "typo3/cms-fluid": "^8.7.7",
+        "typo3/cms-install": "^8.7.7",
+        "typo3/cms-scheduler": "^8.7.7",
+        "typo3/cms-saltedpasswords": "^8.7.7",
         "typo3/cms-form": "^8.7.8"
+    },
+    "require-dev": {
+        "namelesscoder/typo3-repository-client": "^1.3",
+        "squizlabs/php_codesniffer": "^2.8"
+    },
+    "replace": {
+        "syzygy_form_star_rating": "self.version",
+        "typo3-ter/syzygy-form-star-rating": "self.version"
     },
     "autoload": {
         "psr-4": {
             "SyzygyTypo3\\SyzygyFormStarRating\\": "Classes"
         }
+    },
+    "config": {
+        "vendor-dir": ".Build/vendor",
+        "bin-dir": ".Build/bin"
+    },
+    "extra": {
+        "typo3/cms": {
+            "cms-package-dir": "{$vendor-dir}/typo3/cms",
+            "web-dir": ".Build/Web"
+        }
+    },
+    "scripts": {
+        "extension-cleanup-for-release": [
+            "rm -rf Tests/",
+            "rm .gitignore",
+            "rm .travis.yml",
+            "rm composer.lock"
+        ]
     }
 }
